@@ -1,0 +1,42 @@
+#import <Foundation/NSString.h>
+
+const NSString *kCFLocaleMeasurementSystem =
+  @"kCFLocaleMeasurementSystem";
+const NSString *kCFLocaleDecimalSeparator =
+  @"kCFLocaleDecimalSeparator";
+const NSString *kCFLocaleGroupingSeparator =
+  @"kCFLocaleGroupingSeparator";
+const NSString *kCFLocaleCurrencySymbol =
+  @"kCFLocaleCurrencySymbol";
+const NSString *kCFLocaleCurrencyCode =
+  @"currency";
+const NSString *kCFLocaleIdentifier =
+  @"kCFLocaleIdentifier";
+const NSString *kCFLocaleLanguageCode =
+  @"kCFLocaleLanguageCode";
+const NSString *kCFLocaleCountryCode =
+  @"kCFLocaleCountryCode";
+const NSString *kCFLocaleScriptCode =
+  @"kCFLocaleScriptCode";
+const NSString *kCFLocaleVariantCode =
+  @"kCFLocaleVariantCode";
+const NSString *kCFLocaleExemplarCharacterSet =
+  @"kCFLocaleExemplarCharacterSet";
+const NSString *kCFLocaleCalendarIdentifier =
+  @"kCFLocaleCalendarIdentifier";
+const NSString *kCFLocaleCalendar =
+  @"calendar";
+const NSString *kCFLocaleCollationIdentifier =
+  @"collation";
+const NSString *kCFLocaleUsesMetricSystem =
+  @"kCFLocaleUsesMetricSystem";
+const NSString *kCFLocaleCollatorIdentifier =
+  @"kCFLocaleCollatorIdentifier";
+const NSString *kCFLocaleQuotationBeginDelimiterKey =
+  @"kCFLocaleQuotationBeginDelimiterKey";
+const NSString *kCFLocaleQuotationEndDelimiterKey =
+  @"kCFLocaleQuotationEndDelimiterKey";
+const NSString *kCFLocaleAlternateQuotationBeginDelimiterKey =
+  @"kCFLocaleAlternateQuotationBeginDelimiterKey";
+const NSString *kCFLocaleAlternateQuotationEndDelimiterKey =
+  @"kCFLocaleAlternateQuotationEndDelimiterKey";
